# flungo-portfolio

./: .gitignore  README.md
backend/flungo_portfolio/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/flungo_portfolio/categories/: models.py  permissions.py  urls.py  views.py
backend/flungo_portfolio/categories/migrations/: 0001_initial.py  0002_alter_category_sub_categories.py
backend/flungo_portfolio/data/db/: postmaster.pid
backend/flungo_portfolio/data/db/base/13756/: 2619
backend/flungo_portfolio/data/db/base/13757/: pg_internal.init
backend/flungo_portfolio/data/db/base/16384/: 1247  1249  1249_fsm  1259  16385  16386  16391  16392  16394  16395  16399  16401  16403  16404  16408  16410  16415  16417  16419  16424  16426  16427  16431  16433  16435  16440  16442  16447  16449  16456  16458  16470  16471  16472  16473  16485  16487  16499  16500  16501  (+107 more)
backend/flungo_portfolio/data/db/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
backend/flungo_portfolio/data/db/pg_multixact/members/: 0000
backend/flungo_portfolio/data/db/pg_stat/: db_0.stat  db_13757.stat  db_16384.stat  global.stat
backend/flungo_portfolio/data/db/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
backend/flungo_portfolio/data/db/pg_xact/: 0000
backend/flungo_portfolio/flungo_portfolio/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/flungo_portfolio/main/: admin.py  models.py  serializers.py  urls.py  views.py
backend/flungo_portfolio/main/migrations/: 0001_initial.py
frontend/flungo_portfolio/: README.md  pubspec.yaml
(+45 files in other folders)
